<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/tab_home" />
    <item
        android:id="@+id/nav_shows"
        android:icon="@drawable/ic_shows"
        android:title="@string/tab_shows" />
    <item
        android:id="@+id/nav_articles"
        android:icon="@drawable/ic_article"
        android:title="@string/tab_articles" />
    <item
        android:id="@+id/nav_scene"
        android:icon="@drawable/ic_scene"
        android:title="@string/tab_scene" />
    <item
        android:id="@+id/nav_community"
        android:icon="@drawable/ic_community"
        android:title="@string/tab_community" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_info"
        android:title="@string/tab_about" />
</menu>
